<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookLibrary</string>
    <string name="label_activity1">Welcome to the Library</string>
    <string name="label_activity2">Welcome to the Main Library</string>
    <string name="button1">Enter the Library</string>
    <string name="button2">Add or Insert a Record</string>
    <string name="button3">Delete a Record from the DB</string>
    <string name="button4">Update a Record in the DB</string>
    <string name="button5">Query DB based on year of Publication</string>
    <string name="button6">Query DB based on Year Range </string>
    <string name="button7">Query DB based on Book Genre </string>
    <string name="button8">Query DB based on Author </string>
    <string name="button9">Query DB based on Publisher </string>
    <string name="button10">Query DB based on Book Price Range </string>
    
    <string name="button_insert">Add to DB ... </string>
    <string name="button_go_bck">Go Back</string>
    
    <string name="button_on_name">Based on Auth Name</string>
    <string name="button_on_isbn">Based on Book ISBN</string>
    <string name="button_on_title">Based on Book Title</string>
    
    <string name="label_insert">Welcome to the INSERT Page</string>
    <string name="label_delete_main">Select your mode of DELETION</string>
    
    
    
    <string name="action_settings">Settings</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
